# elemental

./: Cargo.toml
.cargo/: config.toml
src/: gamepad.rs  main.rs  physics.rs
src/debug/: fps.rs  mod.rs  wireframe.rs
src/player/: elements.rs  mod.rs  movement.rs  spawn.rs
